# farewell

./: .gitignore  ARCHITECTURE.md  CHARTER.md  Cargo.toml  README.md  SECURITY.md  THREAT_MODEL.md  deny.toml  rust-toolchain.toml
.cargo/: audit.toml  config.toml
.github/workflows/: reproducible-build.yml  security.yml
crates/farewell_attest/: Cargo.toml
crates/farewell_attest/src/: lib.rs
crates/farewell_audio/: Cargo.toml
crates/farewell_audio/src/: lib.rs
crates/farewell_crypto/: Cargo.toml
crates/farewell_crypto/examples/: kdf_bench.rs
crates/farewell_crypto/src/: aead.rs  error.rs  hash.rs  kdf.rs  kem.rs  lib.rs  rng.rs  sign.rs
crates/farewell_fido2/: Cargo.toml
crates/farewell_fido2/examples/: enroll_test.rs  probe.rs  yubikey_info.rs  yubikey_probe.rs
crates/farewell_fido2/src/: lib.rs
crates/farewell_format/: Cargo.toml
crates/farewell_format/examples/: yubikey_vault_e2e.rs
crates/farewell_format/src/: chunk.rs  error.rs  lib.rs  lock.rs  manifest.rs  metadata.rs  proptest_ops.rs  slot.rs  vault.rs
crates/farewell_keys/: Cargo.toml
crates/farewell_keys/src/: lib.rs
crates/farewell_license/: Cargo.toml
crates/farewell_license/examples/: sign_license.rs
crates/farewell_license/src/: dev_keygen.rs  error.rs  key.rs  lib.rs  payload.rs  serial.rs  store.rs  token.rs  verify.rs
crates/farewell_license/tests/: integration.rs
crates/farewell_mount/: Cargo.toml
crates/farewell_mount/src/: lib.rs
crates/farewell_p2p/: Cargo.toml
crates/farewell_p2p/src/: lib.rs
crates/farewell_passphrase/: Cargo.toml
crates/farewell_passphrase/data/: NOTICE
crates/farewell_passphrase/src/: lib.rs
docs/: REPRODUCIBLE_BUILDS.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: audio_decode.rs  manifest_parse.rs
scripts/: bridge-test.sh  info-demo.sh  make-icns.sh  package-release.sh  read-demo.sh  run-app.sh  verify-no-disk-spill.swift  verify-reproducible.sh  write-demo.sh
swift/: Package.swift
swift/Resources/: README.md
swift/Resources/Localizations/ar.lproj/: Localizable.strings
swift/Resources/Localizations/en.lproj/: Localizable.strings
swift/Resources/Localizations/es.lproj/: Localizable.strings
swift/Resources/Localizations/fa.lproj/: Localizable.strings
swift/Resources/Localizations/fr.lproj/: Localizable.strings
swift/Resources/Localizations/ru.lproj/: Localizable.strings
swift/Resources/Localizations/zh-Hans.lproj/: Localizable.strings
swift/Resources/Localizations/zh-Hant.lproj/: Localizable.strings
swift/Sources/FarewellApp/: main.swift
swift/Sources/FarewellHelloBridge/: main.swift
swift/Sources/FarewellInfoDemo/: main.swift
swift/Sources/FarewellMountFFI/: module.modulemap
swift/Sources/FarewellMountFFI/include/: farewell_mount.h
swift/Sources/FarewellReadDemo/: main.swift
swift/Sources/FarewellWriteDemo/: main.swift
tools/farewell-cli/: Cargo.toml
tools/farewell-cli/src/: main.rs
