# Fuzzing harness for Farewell's untrusted-input parsers.
#
# This crate is intentionally OUTSIDE the main workspace (note the empty
# `[workspace]` table below): it builds only with a nightly toolchain +
# libFuzzer instrumentation, and is a developer/CI tool — it is NOT part
# of the shipped, reproducible build.
#
# Targets cover the two surfaces that parse attacker-controlled bytes:
#   * audio_decode   — farewell_audio (pure-Rust media decode of an
#                      arbitrary file the user may have been sent)
#   * manifest_parse — farewell_format::Manifest::parse (the directory
#                      structure deserialized after AEAD authentication)
#
# Run:  cargo +nightly fuzz run audio_decode
#       cargo +nightly fuzz run manifest_parse

[package]
name = "farewell-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
farewell_audio = { path = "../crates/farewell_audio" }
farewell_format = { path = "../crates/farewell_format" }

[[bin]]
name = "audio_decode"
path = "fuzz_targets/audio_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "manifest_parse"
path = "fuzz_targets/manifest_parse.rs"
test = false
doc = false
bench = false

# Detach from the parent workspace so the pinned reproducible toolchain
# and lockfile are unaffected by fuzzing dependencies.
[workspace]

# Fuzzers want optimized + debug-assertion'd builds.
[profile.release]
debug = 1
