[package]
name = "farewell_crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Cryptographic primitives for Farewell. Hybrid classical + post-quantum (PQC stubs in v0.1)."

[dependencies]
aes-gcm-siv.workspace = true
argon2.workspace = true
blake3.workspace = true
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
libcrux-ml-kem.workspace = true
libcrux-ml-dsa.workspace = true
rand.workspace = true
rand_core.workspace = true
subtle.workspace = true
zeroize.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex.workspace = true
